pippijn     2007/06/03 20:03:26 UTC	(20070603-8375)
  Log:
  - Allow for absolute paths in Makefiles by passing --enable-absolute-paths to the configure script
  - Hopefully fixed the make depend dependency on .depend
  - Added sstrndup convenience function
  - Started moving some #includes from atheme.h to sources that need them
  - Added JSON-C library with JSON-RPC functionality (unused for now)
  - Micro-optimisations
  - Rather large change to the Makefiles: moved common defines in modules to modules/Makefile.defs and common rules to modules/Makefile.rules
  - Added the httpd from contrib/ to modules/misc and added an url-handler list. The XML-RPC now uses this httpd and registers as handler for /xmlrpc (TODO: make this configurable)
  - Added generation of modules/gameserv/namegen_tab.h to the Makefile
  - The JSON module in modules/json/main.c does exactly the same as the XML-RPC module. This is going to change soon.
  

  Changes:	Modified:
  +3 -2		trunk/Makefile.in (File Modified) 
  +56 -22	trunk/configure.ac (File Modified) 
  +41 -25	trunk/contrib/Makefile.in (File Modified) 
  +1 -4		trunk/include/account.h (File Modified) 
  +1 -8		trunk/include/atheme.h (File Modified) 
  +1 -0		trunk/include/atheme_memory.h (File Modified) 
  +43 -46	trunk/include/common.h (File Modified) 
  +5 -8		trunk/include/confparse.h (File Modified) 
  + -		trunk/include/json/ (File Added) 
  +49 -0	trunk/include/json/arraylist.h (File Added) 
  +47 -0	trunk/include/json/bits.h (File Added) 
  +36 -0	trunk/include/json/debug.h (File Added) 
  +33 -0	trunk/include/json/json.h (File Added) 
  +309 -0	trunk/include/json/json_object.h (File Added) 
  +28 -0	trunk/include/json/json_object_private.h (File Added) 
  +75 -0	trunk/include/json/json_tokener.h (File Added) 
  +16 -0	trunk/include/json/json_util.h (File Added) 
  +270 -0	trunk/include/json/linkhash.h (File Added) 
  +42 -0	trunk/include/json/printbuf.h (File Added) 
  + -		trunk/include/json/rpc/ (File Added) 